# COMP-8552-SDL

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Asset/: map.tmx
Asset/animations/: Swordsman_animations.xml  bird_animations.xml
src/: AssetManager.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  KeyboardInputSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.h  SpawnTimerSystem.h
src/manager/: AssetManager.h  Scene.cpp  Scene.h  SceneManager.h
src/utils/: Collision.cpp  Collision.h
